--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 html {
     position: relative;
 }
 
 body {
-    font-family: 'EB Garamond', sans-serif;
+    font-family: 'Lato', sans-serif;
     margin: 0;
 }
 
@@ -28,6 +28,10 @@ footer {
     padding-top: 10px;
 }
 
+.rules {
+    font-size: large;
+}
+
 /* Game */
 
 #player-choice {
@@ -40,3 +44,14 @@ footer {
     margin: 0 40px;
 }
 
+/* Results */
+
+#results {
+    text-align: center;
+    padding: 20px;
+}
+
+.selected {
+    font-size: x-large;
+    font-weight: 500;
+}
