--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,31 @@ h1 {
     font-weight: 700;
 }
 
+/* Footer */
+
+footer {
+    position: absolute;
+    text-align: center;
+    font-size: larger;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+h3 > a {
+    text-decoration: none;
+}
+
+/* Image */
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    padding-bottom: 50px;
+}
+
 /* Rules */
 
 .rules {
@@ -27,7 +52,6 @@ h1 {
     bottom: 0;
     width: 100%;
     height: 100px;
-    padding-top: 10px;
 }
 
 /* Game */
